<resources>
    <string name="app_name" translatable="false">NekoBox</string>
    <string name="app_name_long" translatable="false">NekoBox for Android</string>
    <string name="app_desc">The universal proxy toolchain for Android, written in Kotlin.</string>
    <string name="project">Project</string>
    <string name="github">Source code</string>
    <string name="telegram">Telegram update channel</string>
    <string name="oss_licenses">Open source licenses</string>
    <string name="app_version">Version</string>
    <string name="version_x">Version (%s)</string>
    <string name="logcat">Export debug information</string>
    <string name="menu_configuration">Configuration</string>
    <string name="menu_group">Group</string>
    <string name="menu_about">About</string>
    <string name="theme">Theme</string>
    <string name="document">Document</string>
    <string name="group_default">Ungrouped</string>
    <string name="quick_toggle">Toggle</string>
    <string name="quick_enable">Enable</string>
    <string name="quick_disable">Disable</string>
    <string name="tile_title">Switcher</string>
    <string name="menu_traffic">Traffic</string>
    <string name="menu_dashboard">sing-box Dashboard</string>
    <string name="title_main_menu">Menu</string>
    <string name="desc_menu_group">Manage your servers and subscriptions</string>
    <string name="desc_menu_route">Routing and rule configuration</string>
    <string name="desc_menu_settings">App preferences and behavior</string>
    <string name="desc_menu_log">View and export debug logs</string>
    <string name="desc_menu_dashboard">Live traffic and connections</string>
    <string name="desc_menu_tools">Ping test, network utilities</string>
    <string name="desc_menu_about">Version, source and licenses</string>
    <string name="uwu_profile_banner_title">master</string>
    <string name="uwu_profile_banner_title_custom">Hi, %1$s</string>
    <string name="uwu_random_text_1">Beautiful day for a song!</string>
    <string name="uwu_random_text_2">Have a great day, Master!</string>
    <string name="uwu_random_text_3">"Let\'s do our best! 39!"</string>
    <string name="uwu_random_text_4">Looking for a leek?</string>
    <string name="uwu_random_text_5">"Focus! Ready, go!"</string>
    <string name="uwu_random_text_6">Miku-Miku ni shite ageru!</string>
    <string name="uwu_random_text_7">Welcome back, Master!</string>
    <string name="uwu_random_text_8">Let the music in..!</string>
    <string name="uwu_random_text_9">Reach the highest note!</string>
    <string name="uwu_random_text_10">Writing lyrics for me?</string>
    <string name="app_settings">App Settings</string>
    <string name="tools_and_info">Tools &amp; Info</string>
    <string name="title_ui_settings">UI settings</string>
    <string name="summary_navigate_ui_settings">General UI, themes, appearance, search chips, blur, banners, sound, etc.</string>
    <string name="title_ui_appearance">Appearance</string>
    <string name="title_pref_icon_shape">Icon Shape</string>
    <string name="sheet_banner_category">Bottomsheet Banner</string>
    <string name="particles_disable_title">Disable particles animation</string>
    <string name="particles_disable_summary">Hide the particles effect in bottomsheet</string>
    <string name="sheet_banner_custom_title">Change sheet banner</string>
    <string name="sheet_banner_custom_summary">Set a custom image for the bottomsheet (optional)</string>
    <string name="sheet_banner_delete_title">Remove custom sheet banner</string>
    <string name="sheet_banner_delete_summary">Custom banner removed. Default sheet banner will be used instead</string>
    <string name="sheet_banner_updated">Banner updated</string>
    <string name="sheet_banner_deleted">Banner reset to default</string>
    <string name="banner_profile_category">Profile</string>
    <string name="profile_name_custom_title">Header name</string>
    <string name="profile_name_custom_dialog">Change display name</string>
    <string name="banner_profile_custom_title">Change profile banner</string>
    <string name="banner_profile_custom_summary">Set a custom image for the profile header (optional)</string>
    <string name="custom_banner_profile_set">Avatar updated</string>
    <string name="title_profile_banner_shape">Profile image shape</string>
    <string name="delete_custom_banner_profile">Remove custom profile banner</string>
    <string name="delete_custom_banner_profile_summary">Custom banner removed. Default profile banner will be used instead</string>
    <string name="custom_banner_profile_deleted">Avatar reset to default</string>
    <string name="import_configuration">Import Configuration</string>
    <string name="add_server_manually">Manual Setup</string>
    <string name="desc_import_manually">Add a %1$s server manually</string>
    <string name="action_vless" translatable="false">VLESS</string>
    <string name="title_more_menu">More Menu</string>
    <string name="quick_actions_and_testing">Quick Actions &amp; Testing</string>
    <string name="management">Management</string>
    <string name="action_copy">Copy</string>
    <string name="action_open">Open</string>
    <string name="group_name">Group name</string>
    <string name="group_update">Update</string>
    <string name="group_subscription_link">Subscription Link</string>
    <string name="group_name_required">Group name required</string>
    <string name="group_create">Create group</string>
    <string name="group_create_subscription">Create subscription</string>
    <string name="update_all_subscription">Update all subscriptions</string>
    <string name="group_edit">Edit group</string>
    <string name="group_edit_subscription">Edit subscription</string>
    <string name="group_status_empty">Empty group</string>
    <string name="group_status_empty_subscription">Not updated yet</string>
    <string name="group_status_proxies">%d Proxies</string>
    <string name="group_status_proxies_subscription">%d Proxies | Updated on %s</string>
    <string name="group_no_difference">%s: No difference</string>
    <string name="group_updated">%s: Updated %d proxies</string>
    <string name="group_show_diff">Diff</string>
    <string name="group_diff">Diff (%s)</string>
    <string name="group_delete_confirm_prompt">Are you sure you want to remove this group?</string>
    <string name="group_added">Added: \n%s</string>
    <string name="group_changed">Updated: \n%s</string>
    <string name="group_deleted">Deleted: \n%s</string>
    <string name="group_duplicate">Duplicate: \n%s</string>
    <string name="service_mode">Service Mode</string>
    <string name="service_mode_proxy">Proxy only</string>
    <string name="service_mode_vpn" translatable="false">VPN</string>
    <string name="port_proxy">Proxy Port</string>
    <string name="port_http">HTTP Proxy Port</string>
    <string name="port_transproxy">Transproxy Port</string>
    <string name="cag_route">Route Settings</string>
    <string name="allow_access">Allow Connections from the LAN</string>
    <string name="allow_access_sum">Bind inbound servers to 0.0.0.0</string>
    <string name="inbound_settings">Inbound Settings</string>
    <string name="general_settings">App Settings</string>
    <string name="require_http">Enable HTTP inbound</string>
    <string name="cag_ws">WebSocket Settings</string>
    <string name="ws_max_early_data" translatable="false">Max early data</string>
    <string name="ws_browser_forwarding">Browser Forwarding</string>
    <string name="ws_browser_forwarding_sum">Forward corresponding WebSockets through the browser.</string>
    <string name="speed_interval">Speed Notification Update Interval</string>
    <string name="cag_misc">Misc Settings</string>
    <string name="show_stop">Show Stop Button</string>
    <string name="show_stop_sum">If you don’t want to use Quick Tile as the switch</string>
    <string name="show_direct_speed">Show Direct Speed</string>
    <string name="show_direct_speed_sum">Show the traffic speed without proxy in the notification as
        well</string>
    <string name="security_settings">TLS Security Settings</string>
    <string name="allow_insecure">Allow Insecure</string>
    <string name="allow_insecure_sum">Disable certificate checking. When enabled, this configuration
        is as secure as plaintext</string>
    <string name="traffic" translatable="false">%1$s↑ %2$s↓</string>
    <string name="speed_detail">Proxy： %1$s↑ %2$s↓\nDirect： %3$s↑ %4$s↓</string>
    <string name="speed">%s/s</string>
    <string name="connection_test_testing">Testing…</string>
    <string name="connection_test_available">Success: HTTPS handshake took %dms</string>
    <string name="connection_test_available_http">Success: HTTP handshake took %dms</string>
    <string name="connection_test_error">Failed: %s</string>
    <string name="connection_test_fail">Internet Unavailable</string>
    <string name="connection_test_error_status_code">Error code: #%d</string>
    <string name="cag_dns">DNS Settings</string>
    <string name="remote_dns">Remote DNS</string>
    <string name="direct_dns">Direct DNS</string>
    <string name="enable_dns_routing">Enable DNS Routing</string>
    <string name="dns_routing_message">Resolve domains in bypass routes with Direct DNS. Be aware of
        potential DNS leaks</string>
    <string name="enable_fakedns">Enable FakeDNS</string>
    <string name="fakedns_message">May cause other applications need to be restarted to reconnect to
        the network after proxy stopped</string>
    <string name="dns_hosts">Domain rewrite</string>
    <string name="port_local_dns">Local DNS Port</string>
    <string name="require_transproxy">Enable Transproxy Inbound</string>
    <string name="transproxy_mode">Transproxy Mode</string>
    <string name="connection_test_url">Connection Test URL</string>
    <string name="profile_name">Profile Name</string>
    <string name="server_address">Server</string>
    <string name="server_port">Remote Port</string>
    <string name="username">Username</string>
    <string name="username_opt">Username (Optional)</string>
    <string name="password_opt">Password (Optional)</string>
    <string name="key_opt">Key (Optional)</string>
    <string name="password">Password</string>
    <string name="enc_method">Encrypt Method</string>
    <string name="protocol">Protocol</string>
    <string name="protocol_param">Protocol Param</string>
    <string name="obfs">Obfs</string>
    <string name="obfs_param">Obfs Param</string>
    <string name="uuid">User ID</string>
    <string name="alter_id">Alter ID</string>
    <string name="security">Transport layer encryption</string>
    <string name="network">Network</string>
    <string name="header_type">Header Type</string>
    <string name="ws_host">WebSocket Host</string>
    <string name="ws_path">WebSocket Path</string>
    <string name="http_host">HTTP Host</string>
    <string name="http_path">HTTP Path</string>
    <string name="grpc_service_name">gRPC ServiceName</string>
    <string name="tls">Use TLS</string>
    <string name="sni">Server Name Indication</string>
    <string name="alpn">Application-Layer Protocol Negotiation</string>
    <string name="certificates">Certificates</string>
    <string name="early_data_header_name">Early Data Header Name</string>
    <string name="encryption">Encryption</string>
    <string name="extra_headers">Extra Headers</string>
    <string name="config_type">Config Type</string>
    <string name="edit_config">Edit Config</string>
    <string name="ipv6">IPv6 Route</string>
    <string name="prefer">Prefer</string>
    <string name="only">Only</string>
    <string name="metered">Metered Hint</string>
    <string name="metered_summary">Hint system to treat VPN as metered</string>
    <string name="menu_route">Route</string>
    <string name="route_add">Create Route</string>
    <string name="license">License</string>
</resources>