<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/title_ui_appearance">

        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="uwu_shape_cookie"
            app:entries="@array/icon_shape_entries"
            app:entryValues="@array/icon_shape_values"
            app:icon="@drawable/ic_shape_outline"
            app:key="iconShape"
            app:summary="%s"
            app:title="@string/title_pref_icon_shape" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sheet_banner_category">

        <SwitchPreference
            app:defaultValue="false"
            app:icon="@drawable/ic_sparkles_24dp"
            app:key="disableParticlesSheet"
            app:summary="@string/particles_disable_summary"
            app:title="@string/particles_disable_title" />

        <Preference
            app:icon="@drawable/ic_image_photo"
            app:key="action_pick_sheet_banner"
            app:summary="@string/sheet_banner_custom_summary"
            app:title="@string/sheet_banner_custom_title" />

        <Preference
            app:icon="@drawable/baseline_delete_sweep_24"
            app:key="action_delete_sheet_banner"
            app:summary="@string/sheet_banner_delete_summary"
            app:title="@string/sheet_banner_delete_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/banner_profile_category">

        <EditTextPreference
            app:dialogTitle="@string/profile_name_custom_dialog"
            app:icon="@drawable/ic_image_edit"
            app:key="customProfileName"
            app:title="@string/profile_name_custom_title" />

        <Preference
            app:icon="@drawable/ic_image_camera_alt"
            app:key="action_pick_profile_banner"
            app:summary="@string/banner_profile_custom_summary"
            app:title="@string/banner_profile_custom_title" />

        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="uwu_shape_cookie"
            app:entries="@array/icon_shape_entries"
            app:entryValues="@array/icon_shape_values"
            app:icon="@drawable/ic_shape_outline"
            app:key="profileBannerShape"
            app:summary="%s"
            app:title="@string/title_profile_banner_shape" />

        <Preference
            app:icon="@drawable/ic_action_delete"
            app:key="action_delete_profile_banner"
            app:summary="@string/delete_custom_banner_profile_summary"
            app:title="@string/delete_custom_banner_profile" />

    </PreferenceCategory>

</PreferenceScreen>
